// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column component (SSR) > applies width correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><td style="width: 200px;" class>Test<!----></td><!--]-->
</html>"
`;

exports[`Column component (SSR) > combines width with existing styles 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><td style="width: 200px; background-color: blue;" class>Test<!----></td><!--]-->
</html>"
`;

exports[`Column component (SSR) > forwards additional HTML attributes 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><td class aria-label="Test column" title="Column Title">Test<!----></td><!--]-->
</html>"
`;

exports[`Column component (SSR) > passes style and other props correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><td style="background-color: red;" class data-testid="column-test">Test<!----></td><!--]-->
</html>"
`;

exports[`Column component (SSR) > renders children correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html>

<!--[--><td class>Test message<!----></td><!--]-->
</html>"
`;
